--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="components/card.css">
+    <link rel="stylesheet" href="components/Card.css">
+    <link rel="stylesheet" href="components/CardInput.css">
+    <link rel="stylesheet" href="components/AboutPage.css">
 </head>
 <body>
     <div id="App">
@@ -13,7 +15,6 @@
         <div id="header">
             <h1>Keep Notes</h1>
         </div>
-        <div id="main"></div>
         <!--Footer-->
         <div id="footer">
             <button class="nav">HOME</button>
@@ -22,6 +23,8 @@
         </div>
     </div>
     <script src="script.js"></script>
-    <script src="components/card.js"></script>
+    <script src="components/Card.js"></script>
+    <script src="components/CardInput.js"></script>
+    <script src="components/AboutPage.js"></script>
 </body>
 </html>
