Added enlarged view

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="components/CardInput.css">
     <link rel="stylesheet" href="components/AboutPage.css">
+    <link rel="stylesheet" href="components/View.css">
 </head>
 <body>
     <div id="App">
@@ -25,5 +26,6 @@
     <script src="components/Card.js"></script>
     <script src="components/CardInput.js"></script>
     <script src="components/AboutPage.js"></script>
+    <script src="components/View.js"></script>
 </body>
 </html>
